--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,10 @@ input[type="search"]::-webkit-search-cancel-button {
   position: relative;
 }
 
+.submenu__btn-img-pause, .submenu__btn-img {
+  width: 24px;
+}
+
 
 .submenu__btn-pause {
   display: none;
@@ -404,6 +408,18 @@ input[type="search"]::-webkit-search-cancel-button {
   background-repeat: no-repeat;
   background-image: url(../img/12+.jpg);
   background-size: cover;
+}
+
+.btn-listen_none {
+  display: none;
+}
+
+.btn-pause {
+  display: none;
+}
+
+.btn-pause_active {
+  display: block;
 }
 
 /*hero*/
