--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,11 @@ html {
   box-sizing: inherit;
 }
 
+picture {
+  margin: 0;
+  padding: 0;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -206,7 +211,7 @@ body {
 
 .menu {
   align-items: center;
-  padding-right: 79px;
+  margin-right: 79px;
 }
 
 .menu__link {
@@ -352,9 +357,10 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 .submenu {
-  /*justify-content: space-between;*/
   gap: 54px;
+  justify-content: space-between;
   align-items: center;
+  min-height: 60px;
 }
 
 .header__submenu-list {
@@ -866,6 +872,21 @@ color: var(--black);
 
 /*broadcasts*/
 
+.broadcasts__row {
+  position: relative;
+}
+
+.broadcasts__archive {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  max-width: 265px;
+  padding: 114px 0 8px 13px;
+  background-position-x: 12px;
+  background-image: url(../img/microphone-small.png);
+  background-repeat: no-repeat;
+}
+
 .broadcasts__title {
   margin-bottom: 12px;
   color: var(--black);
@@ -982,11 +1003,6 @@ color: var(--black);
   color: var(--text-gray);
 }
 
-.broadcasts__archive {
-  padding: 114px 0 8px 0;
-  background-image: url(../img/microphone-small.png);
-  background-repeat: no-repeat;
-}
 
 .broadcasts__link-archive {
   margin-bottom: 15px;
